<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test2</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn2">Boton2</string>
    <string name="btn3">Boton3</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="caja1_2">Get1:</string>
    <string name="caja2_2">Get2:</string>
    <string name="btn2_2">Boton</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="btn4">Btn4</string>
    <string name="title_activity_request">RequestActivity</string>

</resources>
